--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Ben Hoskings"
+  name             : "Freya Tatham"
   avatar           : "ProfilePic.png"
   bio              : "4rd Year Systems Engineer"
   location         : "Leamington Spa"
