--- a/_config.yml
+++ b/_config.yml
@@ -10,11 +10,11 @@
 locale                   : "en-GB"
 title                    : "Freya Tatham / Homepage"
 title_separator          : "-"
-name                     : &name "Ben Hoskings Website"
-description              : &description "Ben Hoskings personal website"
-url                      : https://benhoskings1.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+name                     : &name "Freya Tatham Website"
+description              : &description "Freya Tatham personal website"
+url                      : https://freyatatham.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "/benhoskings1.github.io"
+repository               : "/freyatatham.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
@@ -97,13 +97,13 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "benhoskings1"
+  github           : "freyatatham"
   google_plus      :
   keybase          :
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "ben-hoskings"
+  linkedin         : "freya-tatham"
   orcid            : # "http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
