--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 # Site Author
 author:
   name             : "Freya Tatham"
-  avatar           : "profilepicture.JPG"
+  avatar           : "betterprofilepic.JPG"
   bio              : "Final Year Materials Scientist and Engineer"
   location         : "Sheffield"
   employer         : "University of Sheffield"
