--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,13 +1,13 @@
 # main links links
 main:
   - title: "Academic Projects"
-    url: /academic_projects/
+    url: /academic_projects/ 
 
-  - title: "Hobby Projects"
-    url: /hobby_projects/  
+  - title: "Work Experience"
+    url: /_work_experience/  
 
-  - title: "Skills & Experience"
-    url: /skills_experience/  
+  - title: "Achievements"
+    url: /_achievements/
     
   - title: "CV"
     url: /cv/
