--- a/_config.yml
+++ b/_config.yml
@@ -83,8 +83,8 @@ analytics:
 author:
   name             : "Freya Tatham"
   avatar           : "betterprofilepic.jpg"
-  bio              : "Final Year Materials Scientist and Engineer"
-  location         : "Sheffield"
+  bio              : "Working in the Materials Science team at Amphico"
+  location         : "London"
   employer         : "University of Sheffield"
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : # "http://yourfullgooglescholarurl.com"
